--- a/syl.Rmd
+++ b/syl.Rmd
@@ -1,4 +1,5 @@
 ---
+title: Syllabus
 header-includes: \usepackage{color} 
 output:
   html_document: default
@@ -13,8 +14,6 @@ require(ggplot2)
 require(grid)
 ```
 `r hl()$basefontsize()`
-
-##Syllabus
 
 Professor: Dr. Wolfgang Rolke  
 Time and Place:  
